cactus-engine/cactus_engine.h

// cactus graph export
typedef void* cactus_graph_t;
typedef uint64_t cactus_node_t;
typedef struct {
    int32_t precision;
    size_t rank;
    size_t shape[8];
    size_t num_elements;
    size_t byte_size;
} cactus_tensor_info_t;
CACTUS_FFI_EXPORT int cactus_graph_layernorm(
    cactus_graph_t graph, cactus_node_t input, cactus_node_t weight, cactus_node_t bias, float epsilon, bool has_bias, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_groupnorm(
    cactus_graph_t graph, cactus_node_t input, cactus_node_t weight, cactus_node_t bias, size_t num_groups, float epsilon, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_batchnorm(
    cactus_graph_t graph, cactus_node_t input, cactus_node_t weight, cactus_node_t bias, cactus_node_t running_mean, cactus_node_t running_var, int32_t axis, float epsilon, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_topk(cactus_graph_t graph, cactus_node_t input, size_t k, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_rms_norm(
    cactus_graph_t graph, cactus_node_t input, cactus_node_t weight, float epsilon, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_rope(
    cactus_graph_t graph, cactus_node_t input, float theta, size_t position_offset, int32_t backend, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_rope_gptj(
    cactus_graph_t graph, cactus_node_t input, float theta, size_t position_offset, size_t rot_dim, int32_t backend, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_softmax(cactus_graph_t graph, cactus_node_t input, int32_t axis, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_attention(
    cactus_graph_t graph, cactus_node_t query, cactus_node_t key, cactus_node_t value, float scale, bool is_causal, size_t position_offset, size_t window_size, int32_t backend, bool use_mask, cactus_node_t mask, bool additive_mask, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_rel_pos_bias(
    cactus_graph_t graph, cactus_node_t query, cactus_node_t relative_key, float scale, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_attention_int8_hybrid(
    cactus_graph_t graph, cactus_node_t query, cactus_node_t key_new, cactus_node_t value_new, float scale, size_t position_offset,
    const int8_t* cached_keys, const int8_t* cached_values, const float* k_scales, const float* v_scales,
    size_t cache_len, size_t num_kv_heads, size_t head_dim, size_t window_size, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_kv_cache_state(
    cactus_graph_t graph, size_t max_seq_len, size_t num_kv_heads, size_t head_dim, size_t window_size, size_t sink_size, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_kv_cache_append(
    cactus_graph_t graph, cactus_node_t new_kv, cactus_node_t cache_state, size_t window_size, size_t sink_size, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_attention_cached(
    cactus_graph_t graph, cactus_node_t query, cactus_node_t key_new, cactus_node_t value_new,
    cactus_node_t k_cache_state, cactus_node_t v_cache_state,
    float scale, size_t position_offset, size_t window_size, size_t v_head_dim, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_conv_cache_state(
    cactus_graph_t graph, size_t window_size, size_t hidden_dim, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_conv_cache_append(
    cactus_graph_t graph, cactus_node_t new_data, cactus_node_t cache_state, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_rfft(
    cactus_graph_t graph, cactus_node_t input, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_irfft(
    cactus_graph_t graph, cactus_node_t input, size_t output_length, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_mel_filter_bank(
    cactus_graph_t graph, size_t num_frequency_bins, size_t num_mel_filters,
    float min_frequency, float max_frequency, size_t sampling_rate,
    int norm_type, int scale_type, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_spectrogram(
    cactus_graph_t graph, cactus_node_t waveform, cactus_node_t mel_filters,
    size_t frame_length, size_t hop_length, size_t fft_length,
    float power, bool center, int pad_mode,
    float mel_floor, int log_mel_mode,
    float dither, float preemphasis, bool remove_dc_offset,
    cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_image_preprocess(
    cactus_graph_t graph, cactus_node_t pixel_input,
    int src_width, int src_height, int target_width, int target_height,
    int patch_size, int channels, float rescale_factor,
    const float* mean, const float* std_dev, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_conv1d_causal(
    cactus_graph_t graph, cactus_node_t input, cactus_node_t weight, size_t kernel_size, size_t dilation, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_conv1d_k3(
    cactus_graph_t graph, cactus_node_t input, cactus_node_t weight, size_t stride, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_conv1d_k7s3(
    cactus_graph_t graph, cactus_node_t input, cactus_node_t weight, cactus_node_t bias, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_conv1d(
    cactus_graph_t graph, cactus_node_t input, cactus_node_t weight, bool has_bias, cactus_node_t bias, size_t stride, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_conv1d_same_depthwise_k9(
    cactus_graph_t graph, cactus_node_t input, cactus_node_t weight, bool has_bias, cactus_node_t bias, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_conv1d_pointwise(
    cactus_graph_t graph, cactus_node_t input, cactus_node_t weight, bool has_bias, cactus_node_t bias, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_conv2d_k3s2p1(
    cactus_graph_t graph, cactus_node_t input, cactus_node_t weight, bool has_bias, cactus_node_t bias, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_conv2d_depthwise_k3s2p1(
    cactus_graph_t graph, cactus_node_t input, cactus_node_t weight, bool has_bias, cactus_node_t bias, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_conv2d_pointwise_1x1(
    cactus_graph_t graph, cactus_node_t input, cactus_node_t weight, bool has_bias, cactus_node_t bias, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_lstm_cell(
    cactus_graph_t graph, cactus_node_t input, cactus_node_t h_prev, cactus_node_t c_prev, cactus_node_t weight_ih, cactus_node_t weight_hh, cactus_node_t bias_ih, cactus_node_t bias_hh, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_gated_deltanet_decode(
    cactus_graph_t graph, cactus_node_t query, cactus_node_t key, cactus_node_t value, cactus_node_t gate_log, cactus_node_t beta, cactus_node_t initial_state, float scale, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_gated_deltanet_prefill(
    cactus_graph_t graph, cactus_node_t query, cactus_node_t key, cactus_node_t value, cactus_node_t gate_log, cactus_node_t beta, cactus_node_t initial_state, size_t chunk_size, float scale, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_stft(
    cactus_graph_t graph, cactus_node_t input, cactus_node_t weight, size_t stride, size_t num_fft_bins, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_altup_predict(
    cactus_graph_t graph, cactus_node_t coefs, const cactus_node_t* streams, size_t num_streams, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_altup_correct(
    cactus_graph_t graph, cactus_node_t coefs, cactus_node_t innovation, const cactus_node_t* predictions, size_t num_predictions, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_gaussian_topk(
    cactus_graph_t graph, cactus_node_t input, float ppf, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_moe_layer_gated(
    cactus_graph_t graph, cactus_node_t hidden, cactus_node_t routing_probs, cactus_node_t topk_indices,
    const cactus_node_t* w1_weights, const cactus_node_t* w3_weights, const cactus_node_t* w2_weights,
    size_t num_experts, size_t num_experts_per_tok, bool normalize_routing, float epsilon, float routed_scaling_factor, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_moe_layer_ungated(
    cactus_graph_t graph, cactus_node_t hidden, cactus_node_t routing_probs, cactus_node_t topk_indices,
    const cactus_node_t* w1_weights, const cactus_node_t* w2_weights,
    size_t num_experts, size_t num_experts_per_tok, bool normalize_routing, float epsilon, float routed_scaling_factor, int32_t activation, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_sample(
    cactus_graph_t graph, cactus_node_t logits, float temperature, float top_p, size_t top_k, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_scatter_topk(
    cactus_graph_t graph, cactus_node_t indices, cactus_node_t values, size_t num_classes, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_persistent(
    cactus_graph_t graph, cactus_node_t source_node, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_is_populated(
    cactus_graph_t graph, cactus_node_t persistent_node, int32_t* out_is_populated);
CACTUS_FFI_EXPORT int cactus_graph_invalidate_persistent(
    cactus_graph_t graph, cactus_node_t persistent_node);
CACTUS_FFI_EXPORT int cactus_graph_execute(cactus_graph_t graph);
CACTUS_FFI_EXPORT int cactus_graph_get_output_ptr(cactus_graph_t graph,
cactus_node_t node, void** out_ptr);
CACTUS_FFI_EXPORT int cactus_graph_get_output_info(cactus_graph_t graph,
cactus_node_t node, cactus_tensor_info_t* out_info);